@startuml

title __SERIETV's Class Diagram__\n

  namespace com.unisa.cinehub {
    namespace model.media {
      namespace serietv {
        interface com.unisa.cinehub.model.media.serietv.PuntataRepository {
            {abstract} + findPuntataByTitle()
        }
      }
    }
  }
  

  namespace com.unisa.cinehub {
    namespace model.media {
      namespace serietv {
        class com.unisa.cinehub.model.media.serietv.PuntataService {
            {static} - logger : Logger
            + PuntataService()
            + addPuntata()
            + mergePuntata()
            + removePuntata()
            + retrieveAll()
            + retrieveBySerieTV()
            + retrieveByStagione()
            + retrievePuntataByKey()
            + searchByTitle()
        }
      }
    }
  }
  

  namespace com.unisa.cinehub {
    namespace model.media {
      namespace serietv {
        interface com.unisa.cinehub.model.media.serietv.SerieTVRepository {
            {abstract} + existsByTitleAnnoUscita()
            {abstract} + findSerieTVByTitle()
        }
      }
    }
  }
  

  namespace com.unisa.cinehub {
    namespace model.media {
      namespace serietv {
        class com.unisa.cinehub.model.media.serietv.SerieTVService {
            {static} - logger : Logger
            + SerieTVService()
            + addGeneri()
            + addSerieTV()
            + addStagione()
            + aggiornaStagione()
            + findMostRecentSerieTv()
            + getStagione()
            + getStagione()
            + mergeSerieTV()
            + removeSerieTV()
            + removeStagione()
            + retrieveAll()
            + retrieveByKey()
            + searchByGenere()
            + searchByTitle()
        }
      }
    }
  }
  

  namespace com.unisa.cinehub {
    namespace model.media {
      namespace serietv {
        interface com.unisa.cinehub.model.media.serietv.StagioneRepository {
        }
      }
    }
  }
  

  com.unisa.cinehub.model.media.serietv.PuntataService o-- com.unisa.cinehub.model.media.serietv.PuntataRepository : puntataRepository
  com.unisa.cinehub.model.media.serietv.PuntataService o-- com.unisa.cinehub.model.media.serietv.SerieTVService : serieTVService
  com.unisa.cinehub.model.media.serietv.PuntataService o-- com.unisa.cinehub.model.media.serietv.StagioneRepository : stagioneRepository
  com.unisa.cinehub.model.media.serietv.PuntataService o-- com.unisa.cinehub.model.utente.UtenteRepository : utenteRepository
  com.unisa.cinehub.model.media.serietv.SerieTVService o-- com.unisa.cinehub.model.media.GenereRepository : genereRepository
  com.unisa.cinehub.model.media.serietv.SerieTVService o-- com.unisa.cinehub.model.media.serietv.PuntataRepository : puntataRepository
  com.unisa.cinehub.model.media.serietv.SerieTVService o-- com.unisa.cinehub.model.media.serietv.SerieTVRepository : serieTVRepository
  com.unisa.cinehub.model.media.serietv.SerieTVService o-- com.unisa.cinehub.model.media.serietv.StagioneRepository : stagioneRepository
  com.unisa.cinehub.model.media.serietv.SerieTVService o-- com.unisa.cinehub.model.utente.UtenteRepository : utenteRepository


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
